<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/previous_month"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginLeft="100dp"
            android:contentDescription="previous month"
            android:src="@drawable/left_arrow" />

        <TextView
            android:id="@+id/display_current_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/current_date"
            android:textColor="#fff"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/next_month"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="start"
            android:layout_marginRight="100dp"
            android:contentDescription="next month"
            android:src="@drawable/right_arrow" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/sun"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/mon"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/tue"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/wed"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/thu"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/fri"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/sat"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
    </LinearLayout>


    <GridView
        android:id="@+id/calendar_gv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="7"
        android:choiceMode="singleChoice" />
    <Button
        android:id="@+id/calendar_add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:background="@color/red"
        android:text="@string/add_event"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_display"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tv_date_display"/>
        <ListView
            android:id="@+id/lv_appointments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selected_date"/>
    </RelativeLayout>


</LinearLayout>